- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived
- Fixed search#DataDocuments issues with documentType parameter, adding it
  to the count query (was getting wrong counts because it was left out),
  set to null if an empty String as ElasticSearch treats that as a real one

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================

Moqui Framework 1.4.1 is a minor new feature and bug fix release. Many of
the new features and bug fixes are related to multi-tenant support
including better isolation of tenants and tenant provisioning services.
Other fixes and improvements are related to Service ECA rules, jobs, DB
setup, and the tx cache.

This release also has various embedded documentation (annotations, etc)
improvements done along with the Making Apps with Moqui book which is now
available and has comprehensive documentation of Moqui Framework and a
summary of Mantle Business Artifacts.

NOTE: Starting with this version Moqui Framework requires Java 7 or later
because updated libraries require Java 7. Partly because of this Moqui
itself will also start to use Java 7 features.

New Features:

- Updated Apache Jackrabbit to 2.8.0, Apache Lucene to 4.8.1,
  ElasticSearch to 1.2.1
- Added UserGroupPreference, like UserPreference but for user groups.
  UserFacade.getPreference() now looks for group preference when no user
  preference is found.
- Changed Service ECA rules with @when of tx-commit or tx-rollback to
  attach to the transaction after the service is run so that results of the
  service run are available.
- Changed datasource configuration so that if datasources other than the
  one for the default-group-name (transactional) are not specified then
  the default-group-name one is used. There is a similar change for the